# epilepsy.science

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  authentication_client.py  base_client.py  config.py  copy_bids_to_pennseive.py  data2transfer.py  data_processing.py  dataset_operations.py  dev.env  diff_pennseive_datasets.py  docker-compose.yml  download_packages.py  enrich_eps_datasets.py  get_pennseive_datasets.py  id_mapping.py  main.py  main.sh  map_datasets.py  map_pennseive_datasets.py  pull_datasets.py  pull_pennseive_datasets.py  push_pennseive_datasets.py  push_pennseive_datasets_test.py  pyproject.toml  sync_CT.py  sync_IEEGrecon.py  sync_MRI_anat.py  sync_freesurfer.py  sync_freesurfer_deface.py  sync_ieeg-recon.py  sync_voxtoolCT.py  test_readedf.py
clients/: __init__.py  authentication_client.py  datasets_client.py  import_client.py  package_client.py
utils/: __init__.py  config.py  google_sheets_client.py
