[project]
name = "epilepsy-science-curate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "backoff>=2.2.1",
    "boto3>=1.40.21",
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ipython>=9.5.0",
    "logging>=0.4.9.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "requests>=2.32.5",
]
